--- a/packages/chat-service/tsconfig.json
+++ b/packages/chat-service/tsconfig.json
@@ -4,7 +4,7 @@
     "types": ["node"]
   },
   "references": [
-    { "path": "../planet-contract" },
+    { "path": "../chat-contract" },
     { "path": "../auth-contract" }
   ],
   "include": ["src"],
