--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-format": "^1.0.2",
     "lint-staged": "^16.2.6",
     "simple-git-hooks": "^2.13.1",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "^4.0.8"
   },
