--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "types": ["node"]
   },
-  "references": [],
+  "references": [
+    { "path": "../../packages/auth-service" },
+    { "path": "../../packages/planet-service" },
+    { "path": "../../packages/chat-service" }
+  ],
   "include": ["src"],
   "exclude": [
     "**/*.test.*",
